@@ -7,6 +7,9 @@
 
 * Added -oa/-ob options to harpcollocate.
 
+* The variable that is binned on with a 'bin(variable)' operation is now
+  always kept in the resulting product.
+
 * Fixed issue in harpcollocate when providing a -nx option without a -ny.
 
 * harpcollocate now ignores empty products instead of raising errors for them.
